<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AdditionMain" android:id="@+id/consLyMain">

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="64dp"
            android:id="@+id/guidelineUpper"/>
    <Button
            android:text="@string/r_btnBasic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdditionBasic"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="@+id/guidelineUpper"
            app:layout_constraintStart_toStartOf="@+id/btnAdditionMixPicture"
            app:layout_constraintEnd_toEndOf="@+id/btnAdditionMixPicture"/>
    <Button
            android:text="@string/r_btnMixPlace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdditionMixPlace"
            app:layout_constraintStart_toStartOf="@+id/btnAdditionMixPicture"
            app:layout_constraintEnd_toEndOf="@+id/btnAdditionMixPicture"
            app:layout_constraintTop_toBottomOf="@+id/btnAdditionBasic" android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/r_btnMixColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdditionMixColor"
            app:layout_constraintStart_toStartOf="@+id/btnAdditionMixPicture"
            app:layout_constraintEnd_toEndOf="@+id/btnAdditionMixPicture"
            app:layout_constraintTop_toBottomOf="@+id/btnAdditionMixPlace" android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/r_btnMixPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdditionMixPicture"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/btnAdditionMixColor"
            android:layout_marginTop="8dp" android:enabled="false"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guidelineLower"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintGuide_end="64dp"/>
    <Button
            android:text="@string/r_btnReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnReturn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/guidelineLower"/>
</android.support.constraint.ConstraintLayout>